--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ToDo</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
 
     </style>
 </head>
 <body>
-
+<div class="content">
+    <div class="todo-title">Make Your Todos</div>
     <input id="new-todo" type="text"><button id="add-button">add</button>
     <script>
         const addTodoButton = document.querySelector('#add-button');
@@ -33,5 +36,6 @@
         });
       </script>
       <ul></ul>
+      </div>
 </body>
 </html>
