input枠にplaceholderを設定

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 <div class="content">
     <div class="todo-title">Make Your Todos</div>
-    <input id="new-todo" type="text"><button id="add-button">add</button>
+    <input id="new-todo" type="text" placeholder="write something"><button id="add-button">add</button>
     <script>
         const addTodoButton = document.querySelector('#add-button');
         addTodoButton.addEventListener('click', () => {
